# nyancat-rust

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUSTIFICATION_PLAN.md  nyancat.1
.github/workflows/: ci.yml  release.yml
scripts/: benchmark_callgrind.sh  benchmark_matrix.sh  release_archive.sh  release_check.sh  update_goldens.sh
src/: Makefile  animation.rs  cli.rs  main.rs  render.rs  runtime.rs  sys.rs  telnet.rs  terminal.rs
src/render/: benchmark.rs  frame_buffer.rs  palette.rs  render_loop.rs
tests/golden/: benchmark.out  crop.out  normal.out  telnet.out  truecolor.out
